# aletheia

./: .gitignore  Agent.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PKI_PORTAL_VISUAL_GUIDE.md  PORTAL_QUICKSTART.md  README.md  SPECIFICATION.md  artwork.alx
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-viewer.yml
aletheia-viewer/: .env.example  PKI_PORTAL_README.md  README.md  ca.cert  create-ca-pub.html  extract-ca-key.js  extract-pubkey.js  index.html  package-lock.json  package.json  test-file.alx  test-key.pub  test-payload.txt  test-user_example_com.cert  vite.config.ts
aletheia-viewer/src/: App.vue  style.css
aletheia-viewer/src/components/: CertificateChainView.vue  DetailsPanel.vue  DevCAGenerator.vue  FileStructureTree.vue  FileUploader.vue  HeaderView.vue  HexView.vue  PKIPortalView.vue  PayloadPreview.vue  SigningPanel.vue  VerificationPanel.vue
aletheia-viewer/src/components/pki-portal/: AuditLogs.vue  CertificateManagement.vue  IntermediatesManagement.vue  PolicyManagement.vue  RevocationManagement.vue  RootsManagement.vue  TrustBundlesManagement.vue
aletheia-viewer/src/lib/: parser.ts  utils.ts  verifier.ts
aletheia-viewer/src/lib/__tests__/: utils.test.ts  verification.test.ts
aletheia-viewer/src/types/: aletheia.ts
docs/: pki-portal-openapi.yaml  pki-portal-plan.md
pki-portal/: Cargo.toml  README.md
pki-portal/migrations/: 20260105000100_create_roots.sql  20260105000200_create_intermediates.sql  20260105000300_create_certificates.sql  20260105000400_create_revocations.sql  20260105000500_create_trust_bundles.sql  20260105000600_create_policy.sql  20260105000700_create_audit_logs.sql
pki-portal/src/: config.rs  error.rs  main.rs  models.rs
pki-portal/src/api/: audit.rs  certificates.rs  health.rs  intermediates.rs  mod.rs  policy.rs  revocations.rs  roots.rs  trust_bundles.rs
src/: ca.rs  certificate.rs  error.rs  file.rs  lib.rs  signer.rs  types.rs  verifier.rs  wasm.rs
