[package]
name = "pki-portal"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
actix-rt = "2.9"
